<resources>
    <string name="app_name">Media Music kotlin</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">TotalSongs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="back_btn">Back</string>
    <string name="open">Open</string>
    <string name="close">Icon</string>
    <string name="app_icon">Close</string>
    <string name="text_nav">Welcome to\nWorld of music</string>
    <string name="feedback">Feedback</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name </string>
    <string name="playlist_delete">Delete </string>
    <string name="user_name">Your Name </string>
    <string name="add_song">Add </string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>