<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/min_15"
            android:layout_margin="8dp"
            android:src="@drawable/ic_timer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/dark_green" />
        <TextView
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/min_15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/min_30"
            android:layout_margin="8dp"
            android:src="@drawable/ic_timer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/dark_green" />
        <TextView
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/min_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/min_60"
            android:layout_margin="8dp"
            android:src="@drawable/ic_timer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/dark_green" />
        <TextView
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/min_60"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


</LinearLayout>