<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shuffleBtn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:text="@string/shuffle_btn"
                    android:drawableTop="@drawable/ic_shuffle"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/shuffle_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/favoriteBtn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:text="@string/favourites_btn"
                    android:drawableTop="@drawable/ic_favorite"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/favourites_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/playlistBtn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:text="@string/playlist_btn"
                    android:drawableTop="@drawable/ic_playlist"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/playlist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/totalSongs"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/total_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:scrollbarThumbVertical="@drawable/ic_scroll_bar"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            tools:layout = "@layout/fragment_now_playing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:fitsSystemWindows="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>